@@ -17,7 +17,7 @@ $dialog = Gtk2::MessageDialog -> new(undef,
 isa_ok($dialog, "Gtk2::MessageDialog");
 
 SKIP: {
-  skip("new_with_markup and set_markup are new in 2.3", 0)
+  skip("new_with_markup and set_markup are new in 2.3", 1)
     if (Gtk2 -> check_version(2, 3, 0));
 
   $dialog = Gtk2::MessageDialog -> new_with_markup(undef,
